--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,5 @@
 @import './css/reset.css';
-
-:root {
-  --primary-color: #4d94fd;
-  --accent-color: #ff4824;
-  --black: #262a34;
-  --dark-grey: #a3a3a3;
-  --light-grey: #b8b8b8;
-  --lightest-grey: #f1f2f2;
-  --green-grey: #7c98a3;
-}
+@import './css/vars.css';
 
 html {
   font-size: 62.5%;
@@ -31,9 +22,101 @@ body {
   line-height: 1.5;
 }
 
+/*---------------- ALGEMEEN ----------------*/
+
+.container {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 32rem; /* px gedeeld door 10 */
+
+  @media (--sm) {
+    max-width: 32rem;
+  }
+  @media (--md) {
+    max-width: 76.8rem;
+  }
+
+  @media (--lg) {
+    max-width: 102.4rem;
+  }
+
+  @media (--xl) {
+    max-width: 90rem;
+  }
+}
+
 .hidden {
   display: none;
 }
+
+/*---------------- NAVIGATIE ----------------*/
+
+.navigatie {
+  width: 40rem;
+  height: 3rem;
+  list-style-type: none;
+  padding-top: 5.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav {
+  color: #1C2745;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.nav:hover {
+  color: #E9BF4E;
+}
+
+.active {
+  border-bottom: 0.2rem  #1C2745 solid;
+}
+
+.link {
+  color: #FFFDF4;
+  text-decoration: none;
+}
+
+.link:visited {
+  color: #3E9798;
+}
+
+.link:active {
+  text-decoration: underline;
+}
+
+.link-hover {
+  transform: translateZ(0);
+  transition: color 1000ms;
+}
+
+.link-hover::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: 10;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: .1rem;
+  width: 3%;
+  background: #E9BF4E;
+  transform: scaleX(0);
+  transform-origin: 0 0%;
+  will-change: transform;
+  transition: all .5s;
+}
+
+.link-hover:hover::after {
+  transform: scaleX(1);
+}
+
+/*---------------- DEREST ----------------*/
 
 .header {
   padding: .4rem;
@@ -168,7 +251,7 @@ input:-webkit-autofill {
   text-transform: uppercase;
 }
 
-@media (width > 800px) {
+/* @media (width > 800px) {
 
   .header__title {
     font-size: 4rem;
@@ -196,7 +279,7 @@ input:-webkit-autofill {
   .input--button {
     margin: 1rem 0;
   }
-}
+} */
 
 /**
  * Detail
@@ -242,4 +325,8 @@ input:-webkit-autofill {
 
 .more-images ul li img {
   max-height: 160px;
+}
+
+.footer_content{
+
 }
