--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -1,44 +1,35 @@
 @font-face {
-  font-family: 'GT Walsheim';
+  font-family: Radikal;
   src:
-    url(subset-GTWalsheim-Bold.woff2) format('woff2'),
-    url(subset-GTWalsheim-Bold.woff) format('woff');
+    url(./radikal/Radikal-Black.woff2) format('woff2'),
+    url(./radikal/Radikal-Black.woff) format('woff');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'GT Walsheim';
+  font-family: Radikal;
   src:
-    url(subset-GTWalsheim-Black.woff2) format('woff2'),
-    url(subset-GTWalsheim-Black.woff) format('woff');
+    url(./radikal/Radikal.woff2) format('woff2'),
+    url(./radikal/Radikal.woff) format('woff');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Integral CF';
+  font-family: Radikal;
   src:
-    url(subset-IntegralCF-Regular.woff2) format('woff2'),
-    url(subset-IntegralCF-Regular.woff) format('woff');
-  font-weight: normal;
+    url(./radikal/Radikal-Light.woff2) format('woff2'),
+    url(./radikal/Radikal-Light.woff) format('woff');
+  font-weight: light;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Integral CF';
+  font-family: Canoodle;
   src:
-    url(subset-IntegralCF-Bold.woff2) format('woff2'),
-    url(subset-IntegralCF-Bold.woff) format('woff');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'GT Walsheim';
-  src:
-    url(subset-GTWalsheim.woff2) format('woff2'),
-    url(subset-GTWalsheim.woff) format('woff');
+    url(./canoodle/DK-Canoodle.woff2) format('woff2'),
+    url(./canoodle/DK-Canoodle.woff) format('woff');
   font-weight: normal;
   font-style: normal;
 }
