--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -1,13 +1,10 @@
-/* :root {
-  --primary-color: #4d94fd;
-  --accent-color: #ff4824;
-  --black: #262a34;
-  --dark-grey: #a3a3a3;
-  --light-grey: #b8b8b8;
-  --lightest-grey: #f1f2f2;
-  --green-grey: #7c98a3;
-} */
-/* vervang deze naar eigen viewport units, afhankelijk van de geleverde screenshots. */
+:root {
+  --primary-color: #1c2745;
+  --color-dark: #79c39d;
+  --color-light: #3e9798;
+  --color-accent: #e9bf4e;
+  --background-color: #fefdfb;
+}
 
 @custom-media --xs screen and (min-width: 0);
 @custom-media --sm screen and (min-width: 20em); /* 320px */
