--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,11 @@ body {
   display: none;
 }
 
+img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
 /*---------------- DEREST ----------------*/
 
 .header__title {
