--- a/src/css/programma.css
+++ b/src/css/programma.css
@@ -64,11 +64,149 @@
   }
 } */
 
-@media (width < 321px) {
+.header__prog {
+  width: 100%;
+  height: 10rem;
+  /* background-repeat: no-repeat;
+  background-image: url(assets/img/bg/4_100.webp);
 
-  .header__title {
-    font-size: 4rem;
+  @media (--md) {
+    background: url(assets/img/bg/3_100.webp) no-repeat;
   }
+
+  @media (--lg) {
+    background: url(assets/img/bg/2_100.webp) no-repeat;
+  }
+
+  @media (--xl) {
+    background: url(assets/img/bg/1_100.webp) no-repeat;
+  } */
+}
+
+.header__programma {
+  text-align: center;
+}
+
+.header__image {
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  overflow: hidden;
+}
+
+/*---------------- FILTER ----------------*/
+
+.filter {
+  grid-area: filter;
+  display: flex;
+  width: 100%;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.filter_section {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  background-color: var(--primary-color);
+}
+
+.filter__group {
+  padding-right: 5rem;
+  overflow: hidden;
+}
+
+.checkbox,
+.radiobutton {
+  list-style: none;
+}
+
+.filter__li {
+  display: inline;
+}
+
+.filter__titel {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.filter__label {
+  flex: 1;
+  float: left;
+  display: inline-block;
+  text-align: center;
+  width: 14rem;
+  padding: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  color: var(--background-color);
+  background-color: var(--primary-color);
+  border: .2rem solid var(--primary-color);
+  transition: all .1s ease-in-out;
+  /* cursor: pointer; */
+}
+
+.filter__label:hover {
+  cursor: pointer;
+  color: var(--color-accent);
+}
+
+.filter__label::before {
+  /* content: '\f067'; */
+  content: '\f067';
+  display: block;
+  position: absolute;
+  transition: transform .3s ease-in-out;
+}
+
+.filter__input {
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  width: 1px;
+  border: 0;
+  overflow: hidden;
+}
+
+.filter__input[type='checkbox']:checked + label,
+.filter__input[type='radio']:checked + label {
+  background-color: var(--primary-color);
+  color: var(--background-color);
+  border: .2rem solid var(--color-light);
+  transition: all .2s;
+  /* overflow: hidden; */
+}
+
+.filter__input[type='checkbox']:focus + label,
+.filter__input[type='radio']:focus + label {
+  border: .2rem solid var(--color-accent);
+  /* overflow: hidden; */
+}
+
+.filter__input[type='checkbox']:checked + label::before,
+.filter__input[type='radio']:checked + label::before {
+  content: '\f00c';
+  display: block;
+  position: absolute;
+  transform: rotate(-360deg);
+  transition: transform .3s ease-in-out;
+  /* overflow: hidden; */
+}
+
+.filter__submit {
+  flex: 1;
+  outline: none;
+  border-color: var(--primary-color);
+  background-color: var(--primary-color);
+  cursor: pointer;
+}
+
+.filter__submit:checked {
+  background-color: var(--color-light);
+}
+
+/*-----------------RESULTATEN-----------------------*/
+
+@media (width < 768px) {
 
   .programma {
     display: grid;
@@ -81,26 +219,39 @@
   }
 
   .filter {
-    justify-self: end;
-  }
-
-  .filter__form {
     flex-direction: column;
     max-width: 30rem;
+    padding-left: 1rem;
   }
 
-  .input--button {
+  .filter__group {
+    padding-right: 0;
+  }
+
+  .filter__submit {
     margin: 1rem 0;
     flex-direction: row;
   }
+
+  .radiobutton,
+  .checkbox {
+    display: flex;
+    flex-flow: row wrap;
+    width: 30rem;
+  }
+
+  .filter__label {
+    width: 12.5rem;
+  }
 }
 
-.acts {
-  grid-area: content;
+.header {
+  grid-area: header;
 }
 
 .act__section {
   display: grid;
+  grid-area: content;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   grid-gap: 4rem;
   justify-self: space-between;
